--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'com.dmitrijza'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,8 +10,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.1.6.Final'
 }
 
 test {
